test_nginx_ingress_controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      namespace: default
      labels:
        name: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-controller
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0
        args:
        - /nginx-ingress-controller
        - --configmap=$POD_NAMESPACE/nginx-configuration # nginx-configuration name을 가진
                                                         # configMap을 만들어, timeout, ssl 등 
                                                         # 설정을 용이하게 만들기 위함.
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
