test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: front-end
spec:
  containers:
  - name: nginx-container
    image: nginx:1.13
    volumeMounts:
    - mountPath: /usr/share/nginx
      name: index
    - mountPath: /etc/nginx/conf.d
      name: nginx
  volumes:
  - name: index
    hostPath:
      path: /home/master/git/kubernetest_test_yaml/assets
      type: Directory
  - name: nginx
    hostPath:
      path: /home/master/git/kubernetest_test_yaml/assets/nginx/
      type: Directory
