test_pod_manual_schdule.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: front-end
spec:
  nodeName: node02
  containers:
  - name: nginx-container
    image: nginx:1.13
