test_svc_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  clusterIP: 10.100.100.200
  selector:
    app: sebui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80 
    nodePort: 30200
