test_ingress.yaml
apiVersion: networking.k8s.io/v1 # v1.22+ 에서 
kind: Ingress
metadata:
  name: ingress
  labels:
    name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 80
